--- a/experiments/clj-vulkan/llvm/Makefile
+++ b/experiments/clj-vulkan/llvm/Makefile
@@ -1,6 +1,6 @@
-CFLAGS =  -O1 -g -shared
+CFLAGS =  -O1 -S -emit-llvm
 LDFLAGS = -lglfw -lvulkan -lgraalvm-llvm
-LLVM_TOOLS=/usr/lib/jvm/java-11-graalvm/languages/llvm/native/bin
+LLVM_TOOLS=/usr/lib/jvm/java-17-graalvm/languages/llvm/native/bin
 
-bc: vulkan.c
-	${LLVM_TOOLS}/clang $(CFLAGS) vulkan.c $(LDFLAGS) -o vulkan.so
+ll: vulkan.c
+	clang $(CFLAGS) vulkan.c $(LDFLAGS) -o vulkan.ll
